--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,47 @@
-  
 <section class="users-section">
   <ul class="users-list">
     <% @users.each do |user| %>
-      <% if user != current_user %>
       <li>
-         Name: <%= user.name %>
-        <span class="profile-link">
-          <%= link_to 'See Profile',  user_path(user), class: "btn btn-secondary" %>
-           <% if current_user.friend_invites(user) %>
-            <button class="btn btn-warning"> Pending Invitation </button>
-          <% elsif current_user.receive_invitation(user)%>
-            <%= link_to 'Accept', accept_invite_path(user_id: user.id), class:"btn btn-primary" %>
-            <%= link_to 'Decline', reject_invite_path(user_id: user.id), method: :delete, class:"btn btn-danger" %>
-          <% elsif !current_user.friend?(user) && current_user.id != user.id %>
-            <%= link_to 'Add Friend', send_invite_path(user_id: user.id) , class:"btn btn-success" %>
-            <% elsif current_user.friend?(user) %>
-            <%= link_to 'Remove friend', remove_friend_path(user_id: user.id), method: :delete, data: {confirm: "Are you sure you want to remove friend?"}, class: "btn btn-danger" %>
+        Name: <%= user.name %>
+        <span class="file-link">
+          <% if user_signed_in? %>
+            <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
           <% end %>
         </span>
+        <% if user.id != current_user.id %>
+          <% if !current_user.invitation_status_with(user).nil? %>
+            <% case current_user.invitation_status_with(user) %>
+              <% when 'confirmed' %>
+                <%= button_tag 'Friends ✓', class: 'btn btn-sucess', type: 'reset', disabled: true %>
+                <%= link_to '✘', user_friendship_path(current_user.friendship_with(user)), class: 'btn btn-danger', method:"DELETE", data: { confirm: 'Are you sure you want to delete this frienship?' } %>
+              <% when 'cancelled' %>
+                <%= 'CANCELLED' %>
+              <% when 'declined' %>
+                <%= 'DECLINED' %>
+              <% when 'requested' %>
+                <%= button_tag 'Pending ۩', class: 'btn btn-checked', type: 'reset', disabled: true %>
+                <%= link_to '✘', user_friendship_path(current_user.pending_invitation_for(user), status: 'cancelled' ), class: 'btn btn-danger', method:"PATCH", data: { confirm: 'Are you sure you want to cancel this request?' } %>
+            <% end %>
+          <% else %>
+            <% if !current_user.requested_status_with(user).nil?%> 
+              <% case current_user.requested_status_with(user) %>
+              <% when 'confirmed' %>
+                <%= button_tag 'Friends ✓', class: 'btn btn-sucess', type: 'reset', disabled: true %>
+                <%= link_to '✘', "#", class: 'btn btn-danger', method:"PATCH", data: { confirm: 'Are you sure you want to delete this frienship?' } %>
+              <% when 'cancelled' %>
+                <%= 'CANCELLED' %>
+              <% when 'declined' %>
+                <%= 'DECLINED' %>
+              <% when 'requested' %>
+                <%= link_to 'Accept Friendship', user_friendship_path(current_user.pending_request_from(user), status: 'confirmed' ), class: 'btn btn-success', method: 'PATCH', data: {confirm: "Are you sure you want to accept this request?" }%>
+                <%= link_to '✘', user_friendship_path(current_user.pending_request_from(user), status: 'declined' ), class: 'btn btn-danger', method:"PATCH", data: { confirm: 'Are you sure you want to decline this request?' } %>
+            <% end %>
+            <% else %>
+              <%= link_to 'Add Friend',  user_friendships_path(id: user.id), class: 'btn btn-primary', method: 'post', data: {confirm: "Are you sure you want to add a friend?" }%>
+              <% end %>
+          <% end %>
+        <% end %>
       </li>
-      <% end %>
     <% end %>
   </ul>
-
-  <h3 class = "bg-secondary text-white w-50 p-2 mt-5">Pending invitations</h3>
-  <% @pending_invitations.uniq.each do |invitation| %>
-  <ul >
-    <li><%= invitation.name.capitalize%></li>
-  </ul>
-  <% end %>
 </section>
