--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,7 @@
         </div>
       </div>
       <% if current_user %>
-        <%= link_to "Logged as: #{current_user.name.camelize}", current_user %>
-
+      <%= link_to current_user.name, current_user %> | 
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign in', user_session_path %>
@@ -39,6 +38,5 @@
     <main class="main">
       <%= yield %>
     </main>
-    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
