--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,41 @@
 <section class="user-section">
-  <div class="d-flex just-between">
-    <h2><%= "Name: #{@user.name}" %></h2>
-    <% unless current_user == @user ||
-        current_user.pending_invitation_for?(@user) || 
-        current_user.friends_with?(@user) || 
-        current_user.pending_request_from?(@user) %>
-      <%= link_to 'Add Friend',  user_friendships_path(user_friendship: {user_id: current_user.id, friend_id: @user.id}), class: 'profile-btn', method: 'post' %>
+  <h2><%= "Name: #{@user.name}" %></h2>  
+  <% if current_user != @user && friends_check(@user) == false && pending_request(@user) == false %>
+    <%= link_to 'Send friend request', send_friend_user_path, class: 'profile-link' %>
+  <% elsif pending_request(@user) %>
+    <span class= 'profile-link'>Friend request pending</span> 
+          <% if !@pending_request.blank? %>
+            <span class= 'profile-link'><%= accept_friend(@pending_request) %> | <%= reject_friend(@pending_request) %></span>
+          <% end %>
+  <% elsif friends_check(@user) %>
+    <span class= 'profile-link'>Friends!!!</span> <%= unfriend(@user) %>
+  <% end %>
+  <% if current_user == @user %>
+    <% if @pending_requests.any? %>
+      <h4>Pending friendship requests</h4>
+      <ul>
+        <% @pending_requests.each do |request| %>
+          <li><%= request.user.name %> | <%= accept_friend(request) %> | <%= reject_friend(request) %></li>
+        <% end %>
+      </ul>
     <% end %>
-  </div>
+    <% if @friends.any? %>
+      <h4>Friends</h4>
+      <ul>
+        <% @friends.each do |friend| %>
+          <li><%= link_to friend.friend.name, user_path(friend.friend.id), class: 'profile-link' %> | <%= unfriend(friend.friend) %>
+        <% end %>
+      </ul>
+    <% end %>
+  <% end %>
+
+
+  <% if current_user == @user || friends_check(@user) %>
   <article class="timeline">
     <h3>Recent posts:</h3>
     <ul class="posts">
       <%= render @posts %>
     </ul>
   </article>
-  <% if @user == current_user && current_user.requests.any? %>
-    <section class="pend-requests-section">
-      <article class="requests">
-        <h3>Pending Requests:</h3>
-        <ul class="request-list">
-          <%= render 'user_friendships/friend_requests', requests: current_user.pending_requests %>
-        </ul>
-      </article>
-    </section>
   <% end %>
 </section>
-
